separate register&login, add validator request
