# account_service/route.go
@@ -10,10 +10,12 @@ import (
 	"github.com/berpergian/chi_learning/shared/database"
 	sharedService "github.com/berpergian/chi_learning/shared/service"
 	"github.com/go-chi/chi/v5"
+	"github.com/go-playground/validator/v10"
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
-func RouteSetup(timeout time.Duration, route *chi.Mux, env *config.Env, dbClient database.IDatabaseClient, bus *config.RabbitBus) {
+func RouteSetup(timeout time.Duration, route *chi.Mux, env *config.Env,
+	dbClient database.IDatabaseClient, bus *config.RabbitBus, validate *validator.Validate) {
 	jwtManager := &sharedService.JWTManager{
 		Secret: []byte(env.AccessTokenSecret),
 		Issuer: env.Issuer,
@@ -29,7 +31,7 @@ func RouteSetup(timeout time.Duration, route *chi.Mux, env *config.Env, dbClient
 	// Public APIs
 	route.Group(func(router chi.Router) {
 		HealthRouter(router)
-		AccountRouter(router, env, jwtManager, database, bus)
+		AccountRouter(router, env, jwtManager, database, bus, validate)
 	})
 }
 
@@ -39,10 +41,12 @@ func HealthRouter(router chi.Router) {
 	router.Get("/health", healthController.Check)
 }
 
-func AccountRouter(router chi.Router, env *config.Env, jwtManager *sharedService.JWTManager, database *mongo.Database, bus *config.RabbitBus) {
+func AccountRouter(router chi.Router, env *config.Env, jwtManager *sharedService.JWTManager,
+	database *mongo.Database, bus *config.RabbitBus, validate *validator.Validate) {
 	playerRepository := repository.RegisterPlayerRepository(database)
-	accountService := service.RegisterAccountService(env, playerRepository, jwtManager, bus)
+	accountService := service.RegisterAccountService(env, playerRepository, jwtManager, bus, validate)
 	accountController := controller.RegisterAccountController(env, accountService)
 
-	router.Post("/registerOrLogin", accountController.RegisterOrLogin)
+	router.Post("/register", accountController.Register)
+	router.Post("/login", accountController.Login)
 }
